# projeto_tcc2

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
