[tool.poetry]
name = "tcc_ej"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.scripts]
tcc_ej = "tcc_ej.tcc_ej:run"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.1"}
peewee = "^3.14.8"
pydantic = "^1.9.0"
Jinja2 = "^3.0.3"
python-multipart = "^0.0.5"
pandas = "^1.4.0"
openpyxl = "^3.0.9"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
